[gd_scene load_steps=27 format=2]

[ext_resource path="res://Scripts/Maps/Map2/BossLevel/BossLevel2.gd" type="Script" id=1]
[ext_resource path="res://Tilesets/Map2/Section 2/Map2_Section2_TileSet.tres" type="TileSet" id=2]
[ext_resource path="res://Scripts/Enemies/Bosses/2/Turing.gd" type="Script" id=3]
[ext_resource path="res://Images/Enemies/Bosses/2/0.png" type="Texture" id=4]
[ext_resource path="res://Images/Enemies/Bosses/2/1.png" type="Texture" id=5]
[ext_resource path="res://Images/Enemies/Bosses/2/2.png" type="Texture" id=6]
[ext_resource path="res://Images/Enemies/Bosses/2/3.png" type="Texture" id=7]
[ext_resource path="res://Images/Enemies/Bosses/2/4.png" type="Texture" id=8]
[ext_resource path="res://Images/Enemies/Bosses/2/5.png" type="Texture" id=9]
[ext_resource path="res://Images/Enemies/Bosses/2/6.png" type="Texture" id=10]
[ext_resource path="res://Images/Enemies/Bosses/2/7.png" type="Texture" id=11]
[ext_resource path="res://Images/Enemies/Bosses/2/8.png" type="Texture" id=12]
[ext_resource path="res://Images/Enemies/Bosses/2/9.png" type="Texture" id=13]
[ext_resource path="res://Images/Enemies/Bosses/2/10.png" type="Texture" id=14]
[ext_resource path="res://Images/Enemies/Bosses/2/11.png" type="Texture" id=15]
[ext_resource path="res://Images/Enemies/Bosses/2/12.png" type="Texture" id=16]
[ext_resource path="res://Images/Enemies/Bosses/2/13.png" type="Texture" id=17]
[ext_resource path="res://Images/Enemies/Bosses/2/14.png" type="Texture" id=18]
[ext_resource path="res://Images/Enemies/Bosses/2/15.png" type="Texture" id=19]
[ext_resource path="res://Scenes/Enemies/Info.tscn" type="PackedScene" id=20]
[ext_resource path="res://Tests/Map Test/PlayerTest.tscn" type="PackedScene" id=21]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 40, 80 )

[sub_resource type="Animation" id=3]

resource_name = "damage"
length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]

resource_name = "death"
length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 5, 290 )

[node name="BossLevel2" type="Node" index="0"]

script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="." index="0"]

scale = Vector2( 2, 2 )
mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 4
collision_mask = 3
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 0, 6, 0, 1, 7, 0, 2, 7, 0, 3, 7, 0, 4, 7, 0, 5, 7, 0, 6, 7, 0, 7, 7, 0, 8, 7, 0, 9, 7, 0, 10, 7, 0, 11, 7, 0, 12, 7, 0, 13, 7, 0, 14, 7, 0, 15, 7, 0, 16, 7, 0, 17, 7, 0, 18, 7, 0, 19, 7, 0, 20, 7, 0, 21, 7, 0, 22, 8, 0, 65536, 4, 0, 65537, 18, 0, 65538, 18, 0, 65539, 18, 0, 65540, 18, 0, 65541, 18, 0, 65542, 18, 0, 65543, 18, 0, 65544, 18, 0, 65545, 18, 0, 65546, 18, 0, 65547, 18, 0, 65548, 18, 0, 65549, 18, 0, 65550, 18, 0, 65551, 18, 0, 65552, 18, 0, 65553, 18, 0, 65554, 18, 0, 65555, 18, 0, 65556, 18, 0, 65557, 18, 0, 65558, 5, 0, 131072, 4, 0, 131073, 19, 0, 131074, 19, 0, 131075, 19, 0, 131076, 19, 0, 131077, 19, 0, 131078, 19, 0, 131079, 19, 0, 131080, 19, 0, 131081, 19, 0, 131082, 19, 0, 131083, 19, 0, 131084, 19, 0, 131085, 19, 0, 131086, 19, 0, 131087, 19, 0, 131088, 19, 0, 131089, 19, 0, 131090, 19, 0, 131091, 19, 0, 131092, 19, 0, 131093, 19, 0, 131094, 11, 0, 196608, 4, 0, 196609, 1610612754, 0, 196610, 1610612754, 0, 196611, 1610612754, 0, 196612, 1610612754, 0, 196613, 1610612754, 0, 196614, 1610612754, 0, 196615, 1610612754, 0, 196616, 1610612754, 0, 196617, 1610612754, 0, 196618, 1610612754, 0, 196619, 1610612754, 0, 196620, 1610612754, 0, 196621, 1610612754, 0, 196622, 1610612754, 0, 196623, 1610612754, 0, 196624, 1610612754, 0, 196625, 1610612754, 0, 196626, 1610612754, 0, 196627, 1610612754, 0, 196628, 1610612754, 0, 196629, 1610612754, 0, 196630, 5, 0, 262144, 4, 0, 262145, 1610612753, 0, 262146, 26, 0, 262147, 1610612753, 0, 262148, 26, 0, 262149, 1610612753, 0, 262150, 26, 0, 262151, 1610612753, 0, 262152, 26, 0, 262153, 1610612753, 0, 262154, 26, 0, 262155, 1610612753, 0, 262156, 26, 0, 262157, 1610612753, 0, 262158, 26, 0, 262159, 1610612753, 0, 262160, 26, 0, 262161, 1610612753, 0, 262162, 26, 0, 262163, 1610612753, 0, 262164, 26, 0, 262165, 1610612753, 0, 262166, 11, 0, 327680, 4, 0, 327681, 26, 0, 327682, 1610612753, 0, 327683, 26, 0, 327684, 1610612753, 0, 327685, 26, 0, 327686, 1610612753, 0, 327687, 26, 0, 327688, 1610612753, 0, 327689, 26, 0, 327690, 1610612753, 0, 327691, 26, 0, 327692, 1610612753, 0, 327693, 26, 0, 327694, 1610612753, 0, 327695, 26, 0, 327696, 1610612753, 0, 327697, 26, 0, 327698, 1610612753, 0, 327699, 26, 0, 327700, 1610612753, 0, 327701, 26, 0, 327702, 5, 0, 393216, 4, 0, 393217, 1610612753, 0, 393218, 26, 0, 393219, 1610612753, 0, 393220, 26, 0, 393221, 1610612753, 0, 393222, 26, 0, 393223, 1610612753, 0, 393224, 26, 0, 393225, 1610612753, 0, 393226, 26, 0, 393227, 1610612753, 0, 393228, 26, 0, 393229, 1610612753, 0, 393230, 26, 0, 393231, 1610612753, 0, 393232, 26, 0, 393233, 1610612753, 0, 393234, 26, 0, 393235, 1610612753, 0, 393236, 26, 0, 393237, 1610612753, 0, 393238, 11, 0, 458752, 4, 0, 458753, 26, 0, 458754, 26, 0, 458755, 26, 0, 458756, 26, 0, 458757, 26, 0, 458758, 26, 0, 458759, 26, 0, 458760, 26, 0, 458761, 26, 0, 458762, 26, 0, 458763, 26, 0, 458764, 26, 0, 458765, 26, 0, 458766, 26, 0, 458767, 26, 0, 458768, 26, 0, 458769, 26, 0, 458770, 26, 0, 458771, 26, 0, 458772, 26, 0, 458773, 26, 0, 458774, 5, 0, 524288, 4, 0, 524289, 26, 0, 524290, 26, 0, 524291, 26, 0, 524292, 26, 0, 524293, 26, 0, 524294, 26, 0, 524295, 26, 0, 524296, 26, 0, 524297, 26, 0, 524298, 26, 0, 524299, 26, 0, 524300, 26, 0, 524301, 26, 0, 524302, 26, 0, 524303, 26, 0, 524304, 26, 0, 524305, 26, 0, 524306, 26, 0, 524307, 26, 0, 524308, 26, 0, 524309, 26, 0, 524310, 11, 0, 589824, 4, 0, 589825, 21, 0, 589826, 26, 0, 589827, 21, 0, 589828, 26, 0, 589829, 21, 0, 589830, 26, 0, 589831, 21, 0, 589832, 26, 0, 589833, 21, 0, 589834, 26, 0, 589835, 21, 0, 589836, 26, 0, 589837, 21, 0, 589838, 26, 0, 589839, 21, 0, 589840, 26, 0, 589841, 21, 0, 589842, 26, 0, 589843, 21, 0, 589844, 26, 0, 589845, 21, 0, 589846, 5, 0, 655360, 4, 0, 655361, 22, 0, 655362, 26, 0, 655363, 22, 0, 655364, 26, 0, 655365, 22, 0, 655366, 26, 0, 655367, 22, 0, 655368, 26, 0, 655369, 22, 0, 655370, 26, 0, 655371, 22, 0, 655372, 26, 0, 655373, 22, 0, 655374, 26, 0, 655375, 22, 0, 655376, 26, 0, 655377, 22, 0, 655378, 26, 0, 655379, 22, 0, 655380, 26, 0, 655381, 22, 0, 655382, 11, 0, 720896, 4, 0, 720897, 23, 0, 720898, 26, 0, 720899, 23, 0, 720900, 26, 0, 720901, 23, 0, 720902, 26, 0, 720903, 23, 0, 720904, 26, 0, 720905, 23, 0, 720906, 26, 0, 720907, 23, 0, 720908, 26, 0, 720909, 23, 0, 720910, 26, 0, 720911, 23, 0, 720912, 26, 0, 720913, 23, 0, 720914, 26, 0, 720915, 23, 0, 720916, 26, 0, 720917, 23, 0, 720918, 5, 0, 786432, 4, 0, 786433, 24, 0, 786434, 26, 0, 786435, 24, 0, 786436, 26, 0, 786437, 24, 0, 786438, 26, 0, 786439, 24, 0, 786440, 26, 0, 786441, 24, 0, 786442, 26, 0, 786443, 24, 0, 786444, 26, 0, 786445, 24, 0, 786446, 26, 0, 786447, 24, 0, 786448, 26, 0, 786449, 24, 0, 786450, 26, 0, 786451, 24, 0, 786452, 26, 0, 786453, 24, 0, 786454, 11, 0, 851968, 0, 0, 851969, 1, 0, 851970, 1, 0, 851971, 1, 0, 851972, 1, 0, 851973, 1, 0, 851974, 1, 0, 851975, 1, 0, 851976, 1, 0, 851977, 1, 0, 851978, 1, 0, 851979, 1, 0, 851980, 1, 0, 851981, 1, 0, 851982, 1, 0, 851983, 1, 0, 851984, 1, 0, 851985, 1, 0, 851986, 1, 0, 851987, 1, 0, 851988, 1, 0, 851989, 1, 0, 851990, 2, 0, 917504, 15, 0, 917505, 15, 0, 917506, 15, 0, 917507, 15, 0, 917508, 15, 0, 917509, 15, 0, 917510, 15, 0, 917511, 15, 0, 917512, 15, 0, 917513, 15, 0, 917514, 15, 0, 917515, 15, 0, 917516, 15, 0, 917517, 15, 0, 917518, 15, 0, 917519, 15, 0, 917520, 15, 0, 917521, 15, 0, 917522, 15, 0, 917523, 15, 0, 917524, 15, 0, 917525, 15, 0, 917526, 15, 0 )
_sections_unfolded = [ "Cell", "Collision", "Transform" ]

[node name="Boss" type="Node" parent="." index="1"]

[node name="Turing" type="KinematicBody2D" parent="Boss" index="0"]

position = Vector2( 640, 352 )
input_pickable = false
collision_layer = 2
collision_mask = 5
collision/safe_margin = 0.08
script = ExtResource( 3 )
_sections_unfolded = [ "Collision" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="Boss/Turing" index="0"]

position = Vector2( 0, -25 )
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "default"
frame = 14
playing = true
flip_h = true
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boss/Turing" index="1"]

position = Vector2( 0, -25 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Info" parent="Boss/Turing" index="2" instance=ExtResource( 20 )]

[node name="Timer" type="Timer" parent="Boss/Turing" index="3"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Pos0" type="Position2D" parent="Boss/Turing" index="4"]

position = Vector2( -100, -300 )
_sections_unfolded = [ "Transform" ]

[node name="Pos1" type="Position2D" parent="Boss/Turing" index="5"]

position = Vector2( -170, -300 )
_sections_unfolded = [ "Transform" ]

[node name="Pos2" type="Position2D" parent="Boss/Turing" index="6"]

position = Vector2( -240, -300 )
_sections_unfolded = [ "Transform" ]

[node name="Pos3" type="Position2D" parent="Boss/Turing" index="7"]

position = Vector2( -310, -300 )
_sections_unfolded = [ "Transform" ]

[node name="Pos4" type="Position2D" parent="Boss/Turing" index="8"]

position = Vector2( -380, -300 )
_sections_unfolded = [ "Transform" ]

[node name="Pos5" type="Position2D" parent="Boss/Turing" index="9"]

position = Vector2( -450, -300 )
_sections_unfolded = [ "Transform" ]

[node name="Pos6" type="Position2D" parent="Boss/Turing" index="10"]

position = Vector2( -520, -300 )
_sections_unfolded = [ "Transform" ]

[node name="Pos7" type="Position2D" parent="Boss/Turing" index="11"]

position = Vector2( -579, -300 )
_sections_unfolded = [ "Transform" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Boss/Turing" index="12"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/damage = SubResource( 3 )
anims/death = SubResource( 4 )
blend_times = [  ]

[node name="Barrier" type="KinematicBody2D" parent="Boss" index="1"]

editor/display_folded = true
position = Vector2( 544, 320 )
input_pickable = false
collision_layer = 16
collision_mask = 16
collision/safe_margin = 0.08
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boss/Barrier" index="0"]

position = Vector2( 32, -96 )
shape = SubResource( 5 )

[node name="PlayerTest" parent="." index="2" instance=ExtResource( 21 )]

position = Vector2( 64, 352 )

[connection signal="timeout" from="Boss/Turing/Timer" to="Boss/Turing" method="_on_Timer_timeout"]


